# advanced-artificial-intelligence

./: README.md
Assignment 2/: README.md  main.py
Assignment 3/: README.md  db.sqlite3-shm  pyproject.toml  requirements.txt
Assignment 3/chatbot/management/commands/: chat.py
Assignment 3/chatbot_project/: settings.py
