[project]
name = "chatterbot-terminal-client"
version = "1.0.0"
description = "A terminal-based chatbot built with Django and ChatterBot using machine-learning based conversational dialog."
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "Django==6.0.3",
    "ChatterBot==1.2.13",
    "chatterbot-corpus==1.3.3",
    "PyYAML==6.0.3",
    "spacy==3.8.13",
]

[project.optional-dependencies]
models = [
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
